exports[`test A standard order 1`] = `
<li
  className="fhXzbr">
  <span
    className="OTulW">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fKqvxj">
    MOOIE 456 TEST
  </span>
  <span
    className="eyKrwF">
    <span
      className="gLZwgs">
      <span
        className="gLZwgs">
        1
        x 
        Name of the product
      </span>
      <span
        className="gLZwgs">
        2
        x 
        Another product
      </span>
    </span>
  </span>
  <span
    className="jPvoSH">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="dZeSps">
    completed
  </span>
  <span
    className="eYQFHK">
    <a
      aria-label="Download invoice"
      className="ePBMXH"
      href="http://somelink"
      iconSource="download.svg"
      to="http://somelink" />
  </span>
</li>
`;

exports[`test An Order with a disabled invoice button 1`] = `
<li
  className="fhXzbr">
  <span
    className="OTulW">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fKqvxj">
    MOOIE 456 TEST
  </span>
  <span
    className="eyKrwF">
    <span
      className="gLZwgs">
      <span
        className="gLZwgs">
        1
        x 
        Name of the product
      </span>
      <span
        className="gLZwgs">
        2
        x 
        Another product
      </span>
    </span>
  </span>
  <span
    className="jPvoSH">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="dZeSps">
    pending
  </span>
  <span
    className="eYQFHK">
    <button
      aria-label="Download invoice"
      className="iNVwYz knOsJT"
      disabled="disabled"
      to="http://somelink" />
  </span>
</li>
`;
